<resources>
    <string name="app_name">Education Counsellor || Trainer</string>
    <string name="counsellor">Education Counsellor</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="authority">Authority</string>
    <string name="email">Email</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Your Password !!!</string>
    <string name="reset">Reset Password</string>
    <string name="school_authority">School Authority</string>
    <string name="college_authority">College Authority</string>
    <string name="logo">logo</string>
    <string name="add_student">Add Student</string>
    <string name="logout">Logout</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="total_fee">Total Fee</string>
    <string name="total_fee_submitted">Total Fee Submitted</string>
    <string name="date_of_fee_payment_1">Date of Fee Payment 1</string>
    <string name="date_of_fee_payment_2">Date of Fee Payment 2</string>
    <string name="date_of_fee_payment_3">Date of Fee Payment 3</string>
    <string name="date_of_fee_payment_4">Date of Fee Payment 4</string>
    <string name="payment_1">Payment 1</string>
    <string name="payment_2">Payment 2</string>
    <string name="payment_3">Payment 3</string>
    <string name="payment_4">Payment 4</string>
    <string name="transfer_payment">Transfer Payment</string>
    <string name="welcome">WELCOME</string>
    <string name="image">image</string>
    <string name="log_in_to_your_account">Log in to your Account</string>
    <string name="add_center">Add Center</string>
    <string name="center">Center</string>
    <string name="delete_employee">Delete Employee</string>
    <string name="delete_news">Delete News</string>
    <string name="location_address">Location Address</string>
    <string name="head_name">Head Name</string>
    <string name="unique_password">Unique Password</string>
    <string name="delete_center">Delete Center</string>
    <string name="department">Department</string>
    <string name="company_name">Company Name</string>
    <string name="package_name">Package Name</string>
    <string name="location">Location</string>
    <string name="unique_student_id">Unique Student ID</string>
    <string name="delete">Delete</string>
    <string name="admin_dashboard">ADMIN DASHBOARD</string>
    <string name="edit_student_details">Edit Student Details</string>
    <string name="students_list">Students List</string>
    <string name="edit_counsellor_contact">Edit Counsellor Contact</string>
    <string name="current_centers">Current Centers</string>
    <string name="courses">Courses</string>
    <string name="add_employees">Add Employees</string>
    <string name="employees_list">Employees List</string>
    <string name="v_1_0">Rankethon v.1.0</string>
    <string name="delete_student">Delete Student</string>
    <string name="project_drive_link">Project Drive Link</string>
    <string name="grade_allotted">Grade Allotted</string>
    <string name="tutor_score">Tutor Score</string>
    <string name="certificate">Certificate</string>
    <string name="award">Award</string>
    <string name="project_name">Project Name</string>
    <string name="add_news">Add News</string>
    <string name="add_placement">Add Placement</string>
    <string name="contact_number">Contact Number</string>
    <string name="status">Status</string>
    <string name="news">News</string>
    <string name="placement">Placement</string>
    <string name="payment_1_reference_id">Payment 1 Reference ID</string>
    <string name="payment_2_reference_id">Payment 2 Reference ID</string>
    <string name="payment_3_reference_id">Payment 3 Reference ID</string>
    <string name="payment_4_reference_id">Payment 4 Reference ID</string>
    <string name="name">Name</string>
    <string name="motto">Motto</string>
    <string name="google_drive_link">Google Drive Link</string>
    <string name="date">Date</string>
    <string name="employee_name">Employee Name</string>
    <string name="position">Position</string>
    <string name="mail">Mail</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="employee_id">Employee ID</string>
    <string name="submit">Submit</string>
    <string name="add_startup">Add Startup</string>
    <string name="add_counsellor">Add Counsellor</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_hours">Course Hours</string>
    <string name="course_brief_details">Course Brief Details</string>
    <string name="course_content">Course Content</string>
    <string name="total_enrollments">Total Enrollments</string>
    <string name="total_batches">Total Batches</string>
    <string name="total_enrollments_year_wise">Total Enrollments Year Wise</string>
    <string name="total_enrollments_month_wise">Total Enrollments Month Wise</string>
    <string name="add_detailed_content_of_enrolled_users">Add Detailed Content of Enrolled Users</string>
    <string name="internships">Internships</string>
    <string name="school_authority_dashboard">School Authority Dashboard</string>
    <string name="course_id">Course_id</string>
    <string name="active_enrolled_courses">Active enrolled courses</string>
    <string name="inactive_enrolled_courses">Inactive enrolled courses</string>
    <string name="course_details">Course Details</string>
    <string name="fee_submitted_type">Fee submitted type:</string>
    <string name="next_payment_date">Next payment date:</string>
    <string name="content">Content:</string>
    <string name="description">Description:</string>
    <string name="student_id">Student id:</string>
    <string name="total_reviews_given">Total reviews Given</string>
    <string name="active_projects_on_your_id">Active projects on your id</string>
    <string name="startup_name">Startup Name</string>
    <string name="assigned_centres_n">Assigned centres:</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="null0">null</string>
    <string name="suggestion">suggestion</string>
    <string name="student_dashboard">Student Dashboard</string>
    <string name="attend_class">Attend Class</string>
    <string name="add_query">Add Query</string>
    <string name="query_list">Query List</string>
    <string name="courses_list">Courses List</string>
    <string name="active_project_details">Active Project Details</string>
    <string name="call_counsellor">Call Counsellor</string>
    <string name="college_authority_dashboard">College Authority Dashboard</string>
    <string name="give_suggestions">Give Suggestions</string>
    <string name="project_list">Project List</string>
    <string name="suggestion_list">Suggestion List</string>
    <string name="counsellor_dashboard">Counsellor Dashboard</string>
    <string name="attendance">Attendance</string>
    <string name="responsible_centers">Responsible Centers</string>
    <string name="news_list">News List</string>
    <string name="startup_list">Startup List</string>
    <string name="placement_list">Placement List</string>
    <string name="internship_list">Internship List</string>
    <string name="my_account">My Account</string>
    <string name="authority_meet">Authority Meet</string>
    <string name="hod_meet">HOD Meet</string>
    <string name="rankethon_meet">Rankethon Meet</string>
    <string name="student_meet">Student Meet</string>
    <string name="stipend">Stipend</string>
    <string name="vision">Vision</string>
    <string name="website">Website</string>
    <string name="team">Team</string>
    <string name="funding">Funding</string>
    <string name="turnover">Turnover</string>
    <string name="student_name">Student Name</string>
    <string name="meeting_summary">Meeting Summary</string>
    <string name="daily_report">Daily Report</string>
    <string name="add_internship">Add Internship</string>
    <string name="net_registrations_done">Net Registrations Done</string>
    <string name="amount_net_collected">Amount Net Collected</string>
    <string name="last_month_collection">Last Month Collection</string>
    <string name="collection_by_month_for_last_12_months">Collection By Month For Last 12 Months</string>
    <string name="total_absence_month_wise">Total Absence Month Wise</string>
    <string name="average_rating">Average Rating</string>
    <string name="name_of_project">Name of Project</string>
    <string name="link_of_project">Link of Project</string>
    <string name="grade_obtained">Grade Obtained</string>
    <string name="certification_status">Certification Status</string>
    <string name="award_status">Award Status</string>
    <string name="name_of_professor_in_team">Name of Professor in Team</string>
    <string name="start_class">Start Class</string>
    <string name="internship">Internship</string>
    <string name="take_class">Take Class</string>
    <string name="exit">Exit</string>
    <string name="course_wise_student_list">Course Wise student list</string>
    <string name="trainer">trainer</string>
    <string name="trainer_dashboard">Trainer Dashboard</string>
    <string name="employee">Employee</string>
    <string name="class_name">Class</string>
    <string name="unique_employee_id">Unique Employee ID</string>
    <string name="stop_class">Stop Class</string>
    <string name="media_event_link">Media Event Link</string>
    <string name="media_event_description">Media Event Description</string>
    <string name="review">Review</string>
    <string name="media_update">Media Update</string>
    <string name="success_video_and_review">Success Video And Review</string>
    <string name="success_video_link">Success Video Link</string>
    <string name="messages">Messages</string>
    <string name="type_your_message">Type your Message</string>
    <string name="feedback">Feedback</string>
    <string name="live_chat">Live Chat</string>
    <string name="send_notice">Send Notice</string>
    <string name="employee_daily_report">Employee Daily Report</string>
    <string name="batches">Batches:</string>
    <string name="projects">Projects:</string>
    <string name="students">Students:</string>
    <string name="any_query">Any query;</string>
    <string name="send">Send</string>
    <string name="inactive_courses">Inactive courses</string>
    <string name="active_cousres">Active Cousres</string>
    <string name="update">update</string>
    <string name="message">Message</string>
    <string name="rating">Rating</string>
    <string name="hod_feedback">HOD Feedback</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="pay_online">Pay Online</string>
    <string name="paytm_neft">PayTM || NEFT</string>
    <string name="rankethon_website">Rankethon Website</string>
    <string name="add">Add</string>
    <string name="webview_url">WebView URL</string>
</resources>