<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".authority.college.live_chat.chatChoice">

    <Button
        android:id="@+id/admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_1"
        android:text="@string/admin" />

    <Button
        android:id="@+id/counsellor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_1"
        android:text="@string/counsellor" />

    <Button
        android:id="@+id/trainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_1"
        android:text="@string/trainer" />

    <Button
        android:id="@+id/college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_1"
        android:text="@string/college_authority" />

    <Button
        android:id="@+id/school"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_1"
        android:text="@string/school_authority" />
</LinearLayout>