<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".employee.trainer.responsible_centers.ResponsibleCentersDetailsActivity">

    <Button
        android:id="@+id/authority_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/button_back_1"
        android:padding="10sp"
        android:text="@string/authority_meet" />

    <Button
        android:id="@+id/hod_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/button_back_1"
        android:padding="10sp"
        android:text="@string/hod_meet" />

    <Button
        android:id="@+id/rankethon_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/button_back_1"
        android:padding="10sp"
        android:text="@string/rankethon_meet" />

    <Button
        android:id="@+id/student_meet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/button_back_1"
        android:padding="10sp"
        android:text="@string/student_meet" />

    <Button
        android:id="@+id/daily_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@drawable/button_back_1"
        android:padding="10sp"
        android:text="@string/daily_report" />
</LinearLayout>