<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authority.school.AuthoritySchoolDashboardActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/dash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:padding="10sp"
            android:text="@string/school_authority_dashboard"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/dash">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            <Button
                android:id="@+id/give_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_back_1"
                android:padding="10sp"
                android:text="@string/give_suggestions" />
            <Button
                android:id="@+id/suggestion_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_back_1"
                android:padding="10sp"
                android:text="@string/suggestion_list" />
            <Button
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_back_1"
                android:padding="10sp"
                android:text="@string/rating" />
            <Button
                android:id="@+id/chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_blue"
                android:padding="10sp"
                android:text="@string/live_chat"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/startup_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_back_1"
                android:padding="10sp"
                android:text="@string/startup_list" />
            <Button
                android:id="@+id/project_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_back_1"
                android:padding="10sp"
                android:text="@string/project_list" />
            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:background="@drawable/button_red"
                android:padding="10sp"
                android:text="@string/logout"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>