<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10sp"
    tools:context=".admin.EmployeesDetailsActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/position_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_layout">

        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/position_layout">

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:importantForAutofill="no"
            android:inputType="textWebEmailAddress"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail_layout">

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_id"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_layout">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/employee_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout">

        <EditText
            android:id="@+id/employee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/employee_id"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/centers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/employee_layout" />

    <TextView
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centers"
        android:text="@string/assigned_centres_n" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/available"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:background="@drawable/blue_button"
        android:text="@string/submit"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_centerInParent="true"
        android:layout_marginTop="10sp"
        android:background="@drawable/button_red"
        android:padding="5dp"
        android:text="@string/delete_employee"
        android:textColor="@color/white" />
</RelativeLayout>